--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" id="btnCarrito" data-bs-toggle="modal" data-bs-target="#modalCarrito"><i class="fas fa-shopping-cart"></i></a>
+                            <a class="nav-link" id="cartIcon" data-bs-toggle="modal" data-bs-target="#modalCarrito"><i class="fas fa-shopping-cart"></i></a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
@@ -78,15 +78,17 @@
         </section>
         <div class="modal fade" id="modalCarrito" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog">
-                <div class="modal-content">
+                <div class="modal-content" >
                     <div class="modal-header">
                         <h5 class="modal-title" id="exampleModalLabel">Mi Carrito</h5>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
-                    <div class="modal-body d-flex justify-content-between">
-                        <p>item funkos</p>
-                        <p>$</p>
-                        <button class="btn btn-primary">Quitar</button>
+                    <div id="showCart" class="modal-body d-flex justify-content-between">
+                        <table class="table table-striped">
+                            <tbody id="cardTable">
+                
+                            </tbody>
+                          </table>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
